update wiki
add benchmark